# d2d1

./: LICENSE  README.md  pyproject.toml  scrapy.cfg
.github/workflows/: python-package.yml
src/r2d2/models/: dayone.py  drive2.py
src/r2d2/scrapmetal/: items.py  middlewares.py  pipelines.py  settings.py
src/r2d2/scrapmetal/spiders/: d2_spider.py
tests/: test_zero.py
